--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,10 @@
 @import 'base';
+@import 'about';
+@import 'blogs';
+@import 'contact';
+@import 'footer';
+@import 'gallery';
+@import 'header';
+@import 'services';
+@import 'testimonial';
+@import 'utilities';
